🐛 FIX: Scrollbar, overflow was set to auto

--- a/src/layouts/MainApp/styles.module.scss
+++ b/src/layouts/MainApp/styles.module.scss
@@ -6,7 +6,7 @@
 
     main {
       max-height: calc(100vh - 6.5rem);
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 }
