--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,7 +1,7 @@
 .homeContainer {
   height: calc(100vh - 6.5rem);
   padding: 0 4rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   h2 {
     margin-top: 3rem;
