--- a/src/styles/newEpisode.module.scss
+++ b/src/styles/newEpisode.module.scss
@@ -4,7 +4,7 @@
   padding: 0 4rem;
 
   margin: 0 auto;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   header {
     margin-top: 2rem;
